--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Login"></activity>
+        <activity android:name=".RegisterUser" />
         <activity
             android:name=".Children"
-            android:label="@string/title_activity_children"></activity>
-        <activity android:name=".Staff">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:label="@string/title_activity_children" />
+        <activity android:name=".Staff" />
         <activity android:name=".Parent" />
         <activity android:name=".Admin" />
         <activity android:name=".ForgotPass" />
@@ -30,7 +26,13 @@
         <activity android:name=".Login_Staff" />
         <activity android:name=".Login_Parent" />
         <activity android:name=".Login_Admin" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
