--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,24 +8,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".Login"></activity>
         <activity android:name=".RegisterUser" />
         <activity
             android:name=".Children"
             android:label="@string/title_activity_children" />
-        <activity android:name=".Staff" />
+        <activity android:name=".Staff" >
+
+        </activity>
         <activity android:name=".Parent" />
         <activity android:name=".Admin" />
         <activity android:name=".ForgotPass" />
-        <activity android:name=".Sign_Up" />
-        <activity android:name=".Sign_In" />
-        <activity android:name=".Register_Staff" />
-        <activity android:name=".Register_Parent" />
-        <activity android:name=".Register_Admin" />
-        <activity android:name=".Login_Staff" />
-        <activity android:name=".Login_Parent" />
-        <activity android:name=".Login_Admin" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
