--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".Payment">
+
+        </activity>
+        <activity android:name=".Payment_s">
+
+        </activity>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,10 +28,8 @@
         <activity android:name=".RegisterUser" />
         <activity android:name=".Staff" />
         <activity android:name=".Parent" />
-        <activity android:name=".Admin" />
         <activity android:name=".ForgotPass" />
-        <activity android:name=".MainActivity"></activity>
-
+        <activity android:name=".MainActivity" />
 
         <service
             android:name=".MyMessagingService"
@@ -35,10 +39,12 @@
             </intent-filter>
         </service>
 
-        <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
-
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_shiningicon" />
-
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
