--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
         </activity>
         <activity android:name=".RegisterUser" />
-        <activity android:name=".Staff" />
+        <activity android:name=".Staff" android:noHistory="true" ></activity>
         <activity android:name=".Parent" />
         <activity android:name=".ForgotPass" />
         <activity android:name=".MainActivity" />
